All notable changes to this project will be documented in this file. This change log follows the conventions of http://keepachangelog.com/[keepachangelog.com].

== Unreleased (dev)

== 0.15.0 (2021-06-03)
// {{{
=== Added
* https://github.com/liquidz/antq/issues/79[#79]: Offer a Leiningen plugin.
** It tends to be more accurate (since it won't parse your project.clj, having it evaluated by Leiningen instead).
** However the `:upgrade` option will not be supported (since the plugin cannot always know if a given dependency came from a specific profile, middleware, etc).

=== Changed
* Bumped rewrite-clj to 1.0.644-alpha.
* Bumped lambdaisland/kaocha to 1.0.861.
// }}}

== 0.14.1 (2021-05-21)
// {{{
=== Changed
* Bumped tools.deps.alpha to 0.11.922.
** c.f. https://maven.apache.org/docs/3.8.1/release-notes.html
// }}}

== 0.14.0 (2021-05-12)
// {{{
=== Added
* https://github.com/liquidz/antq/issues/75[#75]: Extended `--exclude` option to be able to exclude specific versions.
** Now you can exclude specific versions as follows: `--exclude=foo/bar@1.0.0`

=== Changed
* Bumped tools.deps.alpha 0.11.918.
// }}}

== 0.13.0 (2021-04-15)
// {{{
=== Added
* https://github.com/liquidz/antq/issues/71[#71]: Added support for https://book.babashka.org/index.html#_bb_edn[bb.edn].

=== Changed
* Bumped tools.deps.alpha to 0.11.910.
* Bumped rewrite-clj to 1.0.605-alpha.
* Bumped deps-deploy to the latest commit.
// }}}

== 0.12.4 (2021-04-02)
// {{{
* Re-release 0.12.3 because it was deployed to clojars with wrong content.
// }}}

== 0.12.3 (2021-04-02)
// {{{
=== Changed
*  Bumped rewrite-clj to 1.0.594-alpha.

=== Fixed
* https://github.com/liquidz/antq/issues/70[#70]: Fixed GitHub Actions detector to support matrix variables.
* https://github.com/liquidz/antq/issues/70[#70]: Fix https://github.com/DeLaGuardo/setup-graalvm[DeLaGuardo/setup-graalvm] detector to support v4.0.
// }}}

== 0.12.2 (2021-03-19)
// {{{
=== Changed
* Bumped rewrite-clj to 1.0.591-alpha.

=== Fixed