@@ -1,0 +1,4 @@
+(defproject red1 "n/a"
+  :description "I should fail due to outdated :dependencies"
+  :dependencies [[org.clojure/clojure "1.10.2"]]
+  :plugins [[com.github.liquidz/antq "RELEASE"]])
