@@ -1,0 +1,5 @@
+(defproject red2 "n/a"
+  :description "I should fail due to outdated :managed-dependencies"
+  :managed-dependencies [[com.stuartsierra/dependency "0.2.0"]]
+  :dependencies [[com.stuartsierra/dependency]]
+  :plugins [[com.github.liquidz/antq "RELEASE"]])
