@@ -1,0 +1,4 @@
+(defproject red3 "n/a"
+  :description "I should fail due to outdated :plugins"
+  :plugins [[lein-pprint "1.1.2"]
+            [com.github.liquidz/antq "RELEASE"]])
