@@ -27,7 +27,8 @@
                (dependency {:name "foo/core" :version "1.1.0"})
                (dependency {:name "bar/bar" :version "2.0.0"})
                (dependency {:name "baz/baz" :version "3.0.0"})
-               (dependency {:name "plug/plug" :version "4.0.0"})}
+               (dependency {:name "plug/plug" :version "4.0.0"})
+               (dependency {:name "managed/dependency" :version "5.0.0"})}
              (set deps)))))
 
 (t/deftest load-deps-test
